--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: Board.new, local: true) do |form| %>
+<%= form_with(model: @board, local: true) do |form| %>
   <div class="board_title">
   <%= form.label :title %>
   <%= form.text_field :title %>
