--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,11 +1,16 @@
 <%= form_with(model: @board, local: true) do |form| %>
+  <div class="board_name">
+  <%= form.label :author_name, '名前' %>
+  <%= form.text_field :author_name %>
+  </div>
   <div class="board_title">
-  <%= form.label :title %>
+  <%= form.label :title, 'タイトル' %>
   <%= form.text_field :title %>
   </div>
-  <div class="board_content">
-  <%= form.label :content %>
-  <%= form.text_field :content %>
+  </div>
+  <div class="board_body">
+  <%= form.label :body, '本文' %>
+  <%= form.text_area :body %>
   </div>
   <%= form.submit %>
   <% end %>
