バリデーションの追加

--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,4 +1,14 @@
 <%= form_with(model: @board, local: true) do |form| %>
+  <% if @board.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= @board.errors.count %>件のエラーがあります</h2>
+      <ul>
+      <% @board.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="board_name">
   <%= form.label :author_name, '名前' %>
   <%= form.text_field :author_name %>
