edit,updateメソッドの追加

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -13,6 +13,7 @@
     <td><%= board.title %><td>
     <td><%= board.body %><td>
     <td><%= link_to '詳細を確認する', board_path(board.id) %><td>
+    <td><%= link_to '編集する', edit_board_path(board.id) %><td>
 
   </tr>
 <% end %>
